[package]
name = "cycle-sort"
version = "0.2.0"
authors = ["Staffan Annerwall"]
description = "Simple generic Cycle sort implementation"
license = "Apache-2.0"
documentation = "https://docs.rs/cycle-sort"
repository = "https://github.com/stan3984/cycle-sort"
readme = "README.md"
keywords = ["cycle", "sort", "minimum", "optimal"]

[dependencies]

[dev-dependencies]
rand = "^0.5"
